--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
@@ -18,6 +18,23 @@
             <p class="hero__text">
                 O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__infos">
+                    <li class="infos-bar__infos__item">
+                        <b>Localização</b>
+                        Allianz Parque - Barra Fundo - SP
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Preço</b>
+                        A partir de R$120,00
+                    </li>
+                    <li class="infos-bar__infos__item">
+                        <b>Quando</b>
+                        12/08/2023 às 19hrs
+                    </li>
+                </ul>
+                <a href="#" class="button button__primary">Garanta sua Vaga</a>
+            </div>
         </div>
     </header>
     
