finalização do projeto com contador

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <link rel="stylesheet" href="./styles/main.scss">
 </head>
@@ -16,7 +18,9 @@
         <div class="container">
             <img src="./images/ebac_logo.svg" alt="EBAC" class="hero__logo">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+                O maior evento de tecnologia do Brasil 
+                <span id="text-to-time"> </span> 
+                <span id="time-counter"> </span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
@@ -37,6 +41,60 @@
             </div>
         </div>
     </header>
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">
+                    Front-end
+                </h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                </p>
+            </div>
+            <img src="./images/frontend.png" alt="Front-end" class="event__image" />
+        </div>
+    </section>
+    <section class="event event--ui-ux event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">
+                    UI-UX
+                </h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                </p>
+            </div>
+            <img src="./images/ui-ux.png" alt="Front-end" class="event__image" />
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">
+                    Data Science
+                </h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                </p>
+            </div>
+            <img src="./images/data.png" alt="Front-end" class="event__image" />
+        </div>
+    </section>
+    <section class="event event--backend event--image-left">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">
+                    Back-end
+                </h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                </p>
+            </div>
+            <img src="./images/backend.png" alt="Front-end" class="event__image" />
+        </div>
+    </section>
     
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
