add more lorem in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
                 </h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                 </p>
             </div>
             <img src="./images/frontend.png" alt="Front-end" class="event__image" />
@@ -61,6 +62,7 @@
                     UI-UX
                 </h2>
                 <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                 </p>
             </div>
@@ -75,6 +77,7 @@
                 </h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                 </p>
             </div>
             <img src="./images/data.png" alt="Front-end" class="event__image" />
@@ -87,6 +90,7 @@
                     Back-end
                 </h2>
                 <p class="event__details__description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae amet doloremque, vitae, est, ipsum ut id beatae optio non neque aperiam nam modi! A obcaecati aperiam ipsa magni sit quaerat!
                 </p>
             </div>
